--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "font-awesome": "^4.7.0",
     "foundation-sites": "^6.3.0",
     "jquery": "1.12.4 - 3",
+    "simple-line-icons": "^2.4.1",
     "vue": "^2.1.8"
   }
 }
